Add shopdata and fix bugs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,16 @@
 {
   "cSpell.words": [
     "appspot",
+    "Camo",
     "DZWN",
     "edbw",
     "firebaseapp",
     "firestore",
-    "Qxgh"
+    "Longsleeve",
+    "Qxgh",
+    "Shearling",
+    "Tanktop",
+    "Womens",
+    "Yeezy"
   ]
 }
